# not_working.sol

./: Cargo.toml  lower.rs
base_db/: Cargo.toml
base_db/src/: input.rs  lib.rs
hir_def/: Cargo.toml
hir_def/src/: hir.rs  item_tree.rs  lib.rs  nameres.rs  resolver.rs  semantics.rs  source_map.rs  walk.rs
hir_def/src/ast_id/: mod.rs
hir_def/src/hir/: argument.rs  call_options.rs  constructor.rs  contract.rs  data_location.rs  enumeration.rs  error.rs  event.rs  expr.rs  function.rs  helpers.rs  ident.rs  import.rs  literal.rs  modifier.rs  op.rs  pragma.rs  source_unit.rs  state_mutability.rs  state_variable.rs  statement.rs  structure.rs  type_name.rs  user_defined_value_type.rs  using.rs  variable_declaration.rs  visibility.rs
hir_def/src/items/: mod.rs
hir_def/src/lower/: constructor.rs  contract.rs  enumeration.rs  error.rs  event.rs  expr.rs  function.rs  import.rs  literal.rs  mod.rs  modifier.rs  state_varible.rs  stmt.rs  structure.rs  types.rs  user_defined_value_type.rs
hir_def/src/nameres/: body.rs  import.rs  iter.rs  scope.rs
hir_def/src/nameres/scope/: body.rs  item.rs
hir_def/src/resolution/: import.rs
hir_def/src/scope/: expr.rs  item.rs  mod.rs  resolver.rs
hir_def/src/semantics/: child_container.rs  span_map.rs
hir_def/src/source_map/: item_source_map.rs  span_map.rs
hir_def/tests/: helloworld.rs
hir_nameres/: Cargo.toml
hir_nameres/src/: container.rs  import.rs  inheritance.rs  lib.rs  scope.rs
hir_nameres/src/nameres/: iter.rs
hir_nameres/src/scope/: body.rs  item.rs  prelude.rs
hir_ty/: Cargo.toml
hir_ty/src/: callable.rs  error.rs  extensions.rs  lib.rs  member_kind.rs  resolver.rs  type_check.rs  tys.rs
ide/: Cargo.toml
ide/src/: change.rs  completion.rs  db.rs  diagnostic.rs  fixture.rs  goto_definition.rs  hover.rs  lib.rs  navigation_target.rs
ide/src/completion/: context.rs  item.rs
ide_db/: Cargo.toml
ide_db/src/: defs.rs  lib.rs
lang_server/: Cargo.toml
lang_server/src/: flycheck.rs  from_proto.rs  main.rs  server.rs  tasks.rs  to_proto.rs
lang_server/src/flycheck/: output.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/parser/: assembly.rs  block.rs  common.rs  contract.rs  enum.rs  error.rs  event.rs  expression.rs  function.rs  import.rs  interface.rs  lexer.rs  library.rs  literal.rs  mod.rs  modifier.rs  source_unit.rs  stmt.rs  struct.rs  type_name.rs  using.rs
parser/test_data/syntaxTests/: tight_packing_literals.sol  tight_packing_literals_fine.sol
parser/test_data/syntaxTests/abiEncoder/: abi_encode_conversions.sol
parser/test_data/syntaxTests/controlFlow/localStorageVariables/: dowhile_declaration_fine.sol
parser/test_data/syntaxTests/controlFlow/storageReturn/: dowhile_fine.sol
parser/test_data/syntaxTests/errors/: elementary_non_address_state_mutability_error_argument.sol  error_encodecall_fail_args.sol
parser/test_data/syntaxTests/events/: elementary_non_address_state_mutability_event_argument.sol  event_encodecall_fail_args.sol  event_library_function.sol
parser/test_data/syntaxTests/immutable/: non-value_type_struct.sol
parser/test_data/syntaxTests/inlineAssembly/: function_call_not_found.sol  function_without_call.sol
parser/test_data/syntaxTests/modifiers/: elementary_non_address_state_mutability_modifier_argument.sol
parser/test_data/syntaxTests/multiVariableDeclaration/: disallowWildcards.sol  disallowWildcardsFromReturn.sol
parser/test_data/syntaxTests/nameAndTypeResolution/: 107_empty_name_input_parameter_with_named_one.sol  224_string_bytes_conversion.sol  288_conditional_with_all_types.sol  366_invalid_array_as_statement.sol
parser/test_data/syntaxTests/nameAndTypeResolution/shadowsBuiltin/: illegal_names_function_parameters.sol
parser/test_data/syntaxTests/parsing/: elementary_non_address_state_mutability_argument.sol  elementary_non_address_state_mutability_file_var.sol  elementary_non_address_state_mutability_local.sol  elementary_non_address_state_mutability_return.sol  elementary_non_address_state_mutability_state_variable.sol  function_no_body.sol  function_normal_comments.sol  multiple_functions_natspec_documentation.sol  single_function_param.sol
parser/test_data/syntaxTests/specialFunctions/: encodecall_fail_args_internal_struct_for_uint.sol
parser/test_data/syntaxTests/structs/: calldata_struct_mapping_function.sol
parser/test_data/syntaxTests/tryCatch/: elementary_non_address_state_mutability_try_returns.sol
parser/test_data/syntaxTests/types/: bytesNN_to_uint_same_size.sol  strict_explicit.sol  strict_explicit_err.sol
parser/test_data/syntaxTests/viewPureChecker/: assembly.sol  constant.sol  modifiers.sol
parser/tests/: lexer.rs  parser.rs  split.rs
sourcegen/: Cargo.toml
sourcegen/src/: lib.rs
span/: Cargo.toml
span/src/: ast_id.rs  lib.rs  map.rs
syntax/: Cargo.toml  solidity.ungram
syntax/src/: ast.rs  lib.rs  parse.rs  syntax_error.rs  syntax_node.rs
syntax/src/ast/: ext.rs
syntax/src/syntax_kind/: generated.rs  mod.rs
syntax/src/tests/: ast_src.rs  sourcegen_ast.rs
vfs/: Cargo.toml
vfs/src/: lib.rs  path.rs
