[workspace]
resolver = "1"

members = [
    "parser", "sourcegen", "syntax", "base_db", "hir_def", "span", "lang_server", "ide", "hir_ty", "vfs", "ide_db"]

[workspace.dependencies]
sourcegen = { path = "./sourcegen" }
parser = { path = "./parser" }
syntax = { path = "./syntax" }
base_db = { path = "./base_db" }
vfs = { path = "./vfs" }
rowan = { version = "0.15.4" }
salsa = { package = "salsa", git = "https://github.com/salsa-rs/salsa" }
hir_def = { path = "./hir_def" }
ide = { path = "./ide" }
lang_server = { path = "./lang_server" }
span = { path = "./span" }
variance = "0.1.3"
num-bigint = { version = "0.4.4" }
indexmap = "2.6.0"
futures = "=0.3.30"
tracing = "0.1.40"
derive_more = { features = ["display"], version = "1.0.0" }
sorted-vec = "0.8.4"
line-index = "0.1.2"
camino = "1.1.9"
smallvec = "1.14"