[workspace]
resolver = "1"

members = [
    "parser", 
    "sourcegen", 
    "syntax", 
    "base_db", 
    "hir_def", 
    "lang_server", 
    "ide", 
    "hir_ty", 
    "vfs", 
    "hir_nameres", 
]

[workspace.dependencies]
hir_def = { path = "./hir_def" }
hir_ty = { path = "./hir_ty" }
hir_nameres = { path = "./hir_nameres" }
sourcegen = { path = "./sourcegen" }
parser = { path = "./parser" }
syntax = { path = "./syntax" }
base_db = { path = "./base_db" }
vfs = { path = "./vfs" }
lang_server = { path = "./lang_server" }

rowan = { version = "0.15.4" }
salsa = { package = "salsa", git = "https://github.com/salsa-rs/salsa" }
ide = { path = "./ide" }
variance = "0.1.3"
num-bigint = { version = "0.4.4" }
indexmap = "2.6.0"
futures = "=0.3.30"
tracing = "0.1.40"
derive_more = { features = ["display"], version = "1.0.0" }
sorted-vec = "0.8.4"
line-index = "0.1.2"
camino = "1.1.9"
compact_str = "0.9"
smallvec = "1.0"
async-lsp = "0.2.2"

[workspace.lints.rust]
unused = "allow"
unused_variables = "allow"

