[package]
name = "base_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
vfs.workspace = true
tracing = "0.1.40"
syntax.workspace = true
salsa.workspace = true
rowan.workspace = true
parser.workspace = true