[package]
name = "hir_ty"
version = "0.1.0"
edition = "2021"

[dependencies]
base_db.workspace = true
hir_def.workspace = true
rowan.workspace = true
hir_nameres.workspace = true
salsa.workspace = true
indexmap.workspace = true
syntax.workspace = true
cov-mark.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true