[package]
name = "ide"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
tracing.workspace = true
base_db.workspace = true
salsa.workspace = true
hir_def.workspace = true
rowan.workspace = true
syntax.workspace = true
vfs.workspace = true
camino.workspace = true
line-index.workspace = true