[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cov-mark = "2.0.0-pre.1"
itertools = "0.14.0"
once_cell = "1.17.0"
rowan.workspace = true
salsa.workspace = true

[dev-dependencies]
expect-test = "1.4.0"
proc-macro2 = "1.0.47"
quote = "1.0.20"
ungrammar = "1.16.1"
rustc-hash = "1.1.0"
sourcegen.workspace = true
xshell = "0.2.5"